--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     },
     "autoload": {
         "classmap": [
-            "database"
+            "database",
+            "App/Http/Controllers"
         ],
         "psr-4": {
             "App\\": "app/"
@@ -26,7 +27,7 @@
     },
     "autoload-dev": {
         "classmap": [
-            "tests/TestCase.php"
+            "tests/TestCase.php"            
         ]
     },
     "scripts": {
