--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,17 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
+    "repositories": [
+    {
+        "type": "vcs",
+        "url": "https://github.com/Youpie/simple-html-dom"
+    }
+],
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "jenssegers/mongodb": "^3.0"
+        "jenssegers/mongodb": "^3.0",
+        "simple-html-dom/simple-html-dom": "*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -19,7 +26,8 @@
     "autoload": {
         "classmap": [
             "database",
-            "App/Http/Controllers"
+            "App/Http/Controllers",
+            "vendor/simple-html-dom/simple-html-dom/"
         ],
         "psr-4": {
             "App\\": "app/"
