--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "jenssegers/mongodb": "^3.0",
-        "simple-html-dom/simple-html-dom": "*"
+        "simple-html-dom/simple-html-dom": "*",
+        "os/php-excel": "^2.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
